# fastapi_prodject_nashafirma

./: .example.env  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
nashafirma_fastapi/: README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
nashafirma_fastapi/alembic/: env.py
nashafirma_fastapi/alembic/versions/: 01424301238b_init.py  16a49d3e8033_init.py  1c7e8c2f0ec5_init.py  28b2d4ff9b3d_last2.py  5d74c405d133_init.py  5e42e313e288_init.py  6864c040d703_profile.py  9423dfb2e588_init.py  f01ad6e8f780_init.py
nashafirma_fastapi/conf/: config.py  detail.py
nashafirma_fastapi/database/: db.py  models.py
nashafirma_fastapi/nashafirma_fastapi/conf/: config.py
nashafirma_fastapi/nashafirma_fastapi/database/: db.py  models.py
nashafirma_fastapi/nashafirma_fastapi/repository/: items.py  orders.py  products.py  users.py
nashafirma_fastapi/nashafirma_fastapi/routes/: auth.py  items.py  orders.py  products.py  profiles.py  users.py
nashafirma_fastapi/nashafirma_fastapi/schemas/: items.py  orders.py  products.py  users.py
nashafirma_fastapi/nashafirma_fastapi/static/: styles.css
nashafirma_fastapi/nashafirma_fastapi/utils/: py_logger.py
nashafirma_fastapi/postgres-data/: postmaster.pid
nashafirma_fastapi/postgres-data/base/1/: 2619
nashafirma_fastapi/postgres-data/base/13481/: 1247  1249  1259  16389  16392  16394  16396  16400  16402  16404  16405  16407  16413  16414  16416  16418  16419  16421  16425  16432  16433  16435  16441  16442  16454  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  (+14 more)
nashafirma_fastapi/postgres-data/global/: 1260  2676  pg_control  pg_internal.init
nashafirma_fastapi/postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
nashafirma_fastapi/postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
nashafirma_fastapi/postgres-data/pg_xact/: 0000
nashafirma_fastapi/repository/: items.py  orders.py  products.py  users.py
nashafirma_fastapi/routes/: auth.py  items.py  orders.py  products.py  users.py
nashafirma_fastapi/schemas/: items.py  orders.py  products.py  users.py
nashafirma_fastapi/services/: auth.py  cloud_image.py  email.py
nashafirma_fastapi/static/: styles.css
nashafirma_fastapi/templates/: index.html
nashafirma_fastapi/utils/: py_logger.py
temp/app/: main.py  pyproject.toml  requirements.txt
temp/app/alembic/: env.py
temp/app/alembic/versions/: d4bdb46cda9f_init.py  eb7722ced7b3_init.py
temp/app/app/conf/: config.py
(+31 files in other folders)
