[tool.poetry]
name = "nashafirma-fastapi"
version = "0.1.0"
description = ""
authors = ["VadimTrubay <vadnetvadnet@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
redis = "^5.0.1"
fastapi-limiter = "^0.1.6"
pydantic = "^2.5.3"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
