[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["VadimTrubay <vadnetvadnet@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
pydantic = {extras = ["email"], version = "^2.5.3"}
alembic = "^1.13.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
uvicorn = {extras = ["standard"], version = "^0.27.0"}
libgravatar = "^1.0.4"
asyncpg = "^0.29.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
